--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ prost = "0.13"
 prost-types = "0.13"
 protobuf = "3.7.1"
 crc32fast = "1.4.2"
+bincode = "1.3.3"
+serde = { version = "1.0.218", features = ["derive"] }
 
 [build-dependencies]
 prost = "0.13"
