--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ protobuf = "3.7.1"
 crc32fast = "1.4.2"
 bincode = "1.3.3"
 serde = { version = "1.0.218", features = ["derive"] }
+sled = "0.34.7"
 
 [build-dependencies]
 prost = "0.13"
