--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ crc32fast = "1.4.2"
 bincode = "1.3.3"
 serde = { version = "1.0.218", features = ["derive"] }
 sled = "0.34.7"
+toml = "0.8.20"
 
 [build-dependencies]
 prost = "0.13"
