--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ bincode = "1.3.3"
 serde = { version = "1.0.218", features = ["derive"] }
 sled = "0.34.7"
 toml = "0.8.20"
+crossbeam-utils = "0.8.21"
+panic-control = "0.1.4"
 
 [build-dependencies]
 prost = "0.13"
