--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ sled = "0.34.7"
 toml = "0.8.20"
 crossbeam-utils = "0.8.21"
 panic-control = "0.1.4"
+skiplist = "0.5.1"
 
 [build-dependencies]
 prost = "0.13"
